--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest": "^29.5.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
