--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --coverage",
     "testUI": "vitest --ui",
     "coverage": "vitest run --coverage",
     "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
